fix: change songNumber to songId in song api
